[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocube"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wwj718", email = "wuwenjie718@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["microblocks==0.9.1"]

[project.urls]
Documentation = "https://github.com/wwj718/cocube#readme"
Issues = "https://github.com/wwj718/cocube/issues"
Source = "https://github.com/wwj718/cocube"

[tool.hatch.version]
path = "src/cocube/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cocube tests}"

[tool.coverage.run]
source_pkgs = ["cocube", "tests"]
branch = true
parallel = true
omit = [
  "src/cocube/__about__.py",
]

[tool.coverage.paths]
cocube = ["src/cocube", "*/cocube/src/cocube"]
tests = ["tests", "*/cocube/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
